AX: add AccessibilityObject::computedLabelString() for WebAXI https://bugs.webkit.org/show_bug.cgi?id=129939

Reviewed by Mario Sanchez Prada.

Provide a method that the WebKit Inspector can call in order to
display an accessible name for an AX node.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::accessibilityComputedLabel):
* accessibility/AccessibilityObject.h:


Canonical link: https://commits.webkit.org/153457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172021 268f45cc-cd09-0410-ab3c-d52691b4dbfc