Source/WebCore/accessibility/AccessibilityObject.h
@@ -647,7 +647,9 @@ public:
 
     // Accessibility Text
     virtual void accessibilityText(Vector<AccessibilityText>&) { };
-
+    // A single methods for getting a computed label for an AXObject. It condenses the nuances of accessibilityText. Used by Inspector.
+    String accessibilityComputedLabel();
+    
     // A programmatic way to set a name on an AccessibleObject.
     virtual void setAccessibleName(const AtomicString&) { }
     virtual bool hasAttributesRequiredForInclusion() const;
